[workspace]
members = ["crates/*"]
default-members = ["crates/lib"]
resolver = "2"

[workspace.dependencies]
compiler_base = { path = "crates/compiler_base" }

kclvm-api = { path = "crates/api" }
kclvm-ast = { path = "crates/ast" }
kclvm-ast-pretty = { path = "crates/ast_pretty" }
kclvm-cli = { path = "crates/cli" }
kclvm-cmd = { path = "crates/cmd" }
kclvm-compiler = { path = "crates/compiler" }
kclvm-config = { path = "crates/config" }
kclvm-driver = { path = "crates/driver" }
kclvm-error = { path = "crates/error" }
kclvm-evaluator = { path = "crates/evaluator" }
kclvm-lexer = { path = "crates/lexer" }
kclvm-lib = { path = "crates/lib" }
kclvm-loader = { path = "crates/loader" }
kclvm-macros = { path = "crates/macros" }
kclvm-parser = { path = "crates/parser" }
kclvm-primitives = { path = "crates/primitives" }
kclvm-query = { path = "crates/query" }
kclvm-runner = { path = "crates/runner" }
kclvm-runtime = { path = "crates/runtime" }
kclvm-sema = { path = "crates/sema" }
kclvm-span = { path = "crates/span" }
kclvm-tools = { path = "crates/tools" }
kclvm-utils = { path = "crates/utils" }
kclvm-version = { path = "crates/version" }

[workspace.package]
version = "0.12.0"
edition = "2024"
rust-version = "1.83"
exclude = [".github/"]
license = "Apache-2.0"
readme = "README.md"

[profile.release]
rpath = true
panic = "unwind"
opt-level = "z"  # Optimize for size.
lto = true
