[workspace]
members = [
    "session",
    "macros",
    "span",
    "error",
    "parallel",
    "3rdparty/rustc_errors",
    "3rdparty/rustc_data_structures",
    "3rdparty/rustc_span",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.83"
authors = ["zongzhe1024@163.com"]
exclude = [".github/"]
license = "Apache-2.0"
readme = "README.md"
description = "A common domain programming language framework."
homepage = "https://github.com/kcl-lang/kcl"
repository = "https://github.com/kcl-lang/kcl"
keywords = ["compiler"]
categories = ["command-line-utilities"]
