[package]
name = "kclvm"
version = "0.9.0-alpha.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
    "cdylib",
]
path = "src/lib.rs"
name = "kclvm_cli_cdylib"

[dependencies]
kclvm-api = {path = "./api"}
kclvm-cmd = {path = "./cmd"}
kclvm-ast = {path = "./ast"}
kclvm-runner = {path = "./runner"}
kclvm-parser = {path = "./parser"}
kclvm-compiler = {path = "./compiler"}
kclvm-config = {path = "./config"}
kclvm-loader = {path = "./loader"}
kclvm-runtime = {path = "./runtime"}
kclvm-sema = {path = "./sema"}
kclvm-tools = {path = "./tools"}
kclvm-version = {path = "./version"}
kclvm-error = {path = "./error"}
kclvm-evaluator = {path = "./evaluator"}
kclvm-query = {path = "./query"}
kclvm-driver = {path = "./driver"}

[profile.release]
rpath = true
panic = "unwind"
opt-level = "z"  # Optimize for size.
lto = true

[workspace]
members = [
    "third-party/prost-wkt",
    "third-party/prost-wkt/wkt-build", 
    "third-party/prost-wkt/wkt-types",
    "api",
    "cmd",
    "ast",
    "ast_pretty",
    "compiler",
    "config",
    "error",
    "lexer",
    "macros",
    "parser",
    "runner",
    "runtime",
    "sema",
    "span",
    "tools",
    "version",
    "query",
    "utils",
    "tools/src/LSP"
]

[features]
llvm = ["kclvm-compiler/llvm", "kclvm-runner/llvm", "kclvm-tools/llvm"]
