[package]
name = "kcl"
version = "0.11.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"
name = "kclvm_cli_cdylib"

[dependencies]
kcl-api = { path = "./api" }
kcl-cmd = { path = "./cmd" }
kcl-ast = { path = "./ast" }
kcl-runner = { path = "./runner" }
kcl-parser = { path = "./parser" }
kcl-compiler = { path = "./compiler" }
kcl-config = { path = "./config" }
kcl-loader = { path = "./loader" }
kcl-runtime = { path = "./runtime" }
kcl-sema = { path = "./sema" }
kcl-tools = { path = "./tools" }
kcl-version = { path = "./version" }
kcl-error = { path = "./error" }
kcl-evaluator = { path = "./evaluator" }
kcl-query = { path = "./query" }
kcl-driver = { path = "./driver" }
kcl-primitives = { path = "./primitives" }

[profile.release]
rpath = true
panic = "unwind"
opt-level = "z"  # Optimize for size.
lto = true

[workspace]
members = [
    "third-party/prost-wkt",
    "third-party/prost-wkt/wkt-build",
    "third-party/prost-wkt/wkt-types",
    "primitives",
    "api",
    "cmd",
    "ast",
    "ast_pretty",
    "compiler",
    "config",
    "error",
    "lexer",
    "macros",
    "parser",
    "runner",
    "runtime",
    "sema",
    "span",
    "tools",
    "version",
    "query",
    "utils",
    "tools/src/LSP",
]

[features]
llvm = [
    "kcl-compiler/llvm",
    "kcl-runner/llvm",
    "kcl-tools/llvm",
    "kcl-api/llvm",
]
