[package]
name = "compiler_base_error"
version = "0.0.0"
edition = "2021"
authors = ["zongzhe1024@163.com"]
license = "Apache-2.0 & MIT"
description = "compiler_base_error"
readme = "README.md"
homepage = "https://github.com/KusionStack/KCLVM"
repository = "https://github.com/KusionStack/KCLVM"
keywords = ["compiler", "error"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_base_span = {path = "../span", version = "0.0.0"}
compiler_base_macros = {path = "../macros", version = "0.0.0"}
rustc_errors = {path="../3rdparty/rustc_errors", version="0.0.0"}
unic-langid = {version="0.9.0", features = ["macros"]}

fluent = "0.16.0"
termcolor = "1.0"
walkdir = "2"
anyhow = "1.0"