[package]
name = "compiler_base_error"
version = "0.0.6"
edition = "2021"
authors = ["zongzhe1024@163.com"]
license = "Apache-2.0 OR MIT"
description = "compiler_base_error"
readme = "README.md"
homepage = "https://github.com/KusionStack/KCLVM"
repository = "https://github.com/KusionStack/KCLVM"
keywords = ["compiler", "error"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_base_span = "0.0.1"
compiler_base_macros = "0.0.1"
rustc_errors = "0.0.2"
unic-langid = {version="0.9.0", features = ["macros"]}

fluent = "0.16.0"
termcolor = "1.0"
walkdir = "2"
anyhow = "1.0"