[package]
name = "compiler_base_parallel"
version = "0.0.3"
edition = "2021"
authors = ["zongzhe1024@163.com"]
license = "Apache-2.0 OR MIT"
description = "A common domain programming language framework."
readme = "README.md"
homepage = "https://github.com/kcl-lang/kcl"
repository = "https://github.com/kcl-lang/kcl"
keywords = ["compiler", "parallel"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = "0.8.4"
anyhow = "1.0.69"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_assertions = "1.3.0"
