[package]
name = "compiler_base_session"
version = "0.0.12"
edition = "2021"
authors = ["zongzhe1024@163.com"]
license = "Apache-2.0 OR MIT"
description = "compiler_base_session"
readme = "README.md"
homepage = "https://github.com/KusionStack/KCLVM"
repository = "https://github.com/KusionStack/KCLVM"
keywords = ["compiler", "session"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_base_span = "0.0.1"
compiler_base_error = "0.0.8"
anyhow = "1.0"
