[package]
name = "compiler_base_span"
version = "0.0.0"
edition = "2021"
authors = ["zongzhe1024@163.com"]
license = "Apache-2.0 & MIT"
description = "compiler_base_span"
readme = "README.md"
homepage = "https://github.com/KusionStack/KCLVM"
repository = "https://github.com/KusionStack/KCLVM"
keywords = ["compiler", "span"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_span = {path="../3rdparty/rustc_span", version="0.0.0"}
