[package]
name = "kcl-api"
version.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.28"
tempfile = "3.5.0"
maplit = "1.0.2"

serde_json = "1.0"
serde_yaml_ng = "0.10.0"
anyhow = "1.0.70"
serde = { version = "1", features = ["derive"] }
once_cell = "1.5.2"

prost = "0.14.1"
prost-wkt = "0.7.0"
prost-types = "0.14.1"

kcl-runner = { path = "../runner" }
kcl-config = { path = "../config" }
kcl-driver = { path = "../driver" }
kcl-error = { path = "../error" }
kcl-parser = { path = "../parser" }
kcl-loader = { path = "../loader" }
kcl-sema = { path = "../sema" }
kcl-ast = { path = "../ast" }
kcl-ast-pretty = { path = "../ast_pretty" }
kcl-runtime = { path = "../runtime" }
kcl-tools = { path = "../tools" }
kcl-query = { path = "../query" }
kcl-version = { path = "../version" }
kcl-language-server = { path = "../tools/src/LSP" }
kcl-primitives = { path = "../primitives" }
kcl-utils = { path = "../utils" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonrpc-stdio-server = "18.0.0"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
prost-build = "0.14.1"
prost-wkt-build = "0.7.0"
