[package]
name = "kclvm-ast"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
compiler_base_span = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

kclvm-span = { path = "../span" }
kclvm-error = { path = "../error" }
thread_local = "1.1.7"
kclvm-utils = {path = "../utils"}
anyhow = "1.0"

[dev-dependencies]
kclvm-parser = { path = "../parser" }
