[package]
name = "kcl-ast"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
compiler_base_span.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

kcl-span.workspace = true
kcl-error.workspace = true
thread_local = "1.1.7"
kcl-utils.workspace = true
anyhow = "1.0"

[dev-dependencies]
kcl-parser = { path = "../parser" }
