[package]
name = "kclvm-ast-pretty"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kclvm-error = { path = "../error" }
kclvm-ast = { path = "../ast" }
kclvm-primitives = { path = "../primitives" }

fancy-regex = "0.7.1"
pretty_assertions = "1.3.0"
compiler_base_session = "0.1.3"
compiler_base_macros = "0.1.1"

[dev-dependencies]
kclvm-parser = { path = "../parser" }
