[package]
name = "kcl-ast-pretty"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcl-error.workspace = true
kcl-ast.workspace = true
kcl-primitives.workspace = true

fancy-regex = "0.7.1"
pretty_assertions = "1.3.0"
compiler_base_session.workspace = true
compiler_base_macros.workspace = true

[dev-dependencies]
kcl-parser = { path = "../parser" }
