[package]
name = "kcl-cmd"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
clap = "4.3.0"
compiler_base_session = "0.1.3"

kcl-api.workspace = true
kcl-parser.workspace = true
kcl-runner.workspace = true
kcl-config.workspace = true
kcl-driver.workspace = true
kcl-runtime.workspace = true
kcl-tools.workspace = true
kcl-error.workspace = true
kcl-version.workspace = true
