[package]
name = "kclvm-compiler"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.23"
phf = { version = "0.9", features = ["macros"] }
bit-set = "0.5.0"
bitflags = "1.2.1"
once_cell = "1.5.2"
fancy-regex = "0.7.1"
unicode_names2 = "0.4"
kclvm-ast = { path = "../ast" }
kclvm-sema = { path = "../sema" }
kclvm-runtime = { path = "../runtime" }
kclvm-error = { path = "../error" }
kclvm-primitives = { path = "../primitives" }
