[package]
name = "kclvm-driver"
version.workspace = true
edition.workspace = true

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.86"

kclvm-config = { path = "../config" }
kclvm-runtime = { path = "../runtime" }
kclvm-utils = { path = "../utils" }
kclvm-parser = { path = "../parser" }
kclvm-ast = { path = "../ast" }
kclvm-primitives = { path = "../primitives" }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }

flate2 = "1.0.30"
tar = "0.4.40"
once_cell = "1.19.0"
parking_lot = "0.12.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
oci-client = { default-features = false, version = "0.11.0", features = [
    "rustls-tls",
] }
tokio = { version = "1.37.0", features = ["full"] }
