[package]
name = "kcl-error"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_base_span.workspace = true
compiler_base_session.workspace = true
compiler_base_error.workspace = true
compiler_base_macros.workspace = true

kcl-primitives.workspace = true
kcl-span.workspace = true
kcl-runtime.workspace = true
kcl-utils.workspace = true

anyhow = "1.0"
tracing = "0.1"
annotate-snippets = { version = "0.9.2", default-features = false, features = [
    "color",
] }
serde = { version = "1.0", features = ["derive"] }
termize = "0.1.1"
serde_json = "1.0"
thiserror = "2.0.17"
