[package]
name = "kcl-evaluator"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
generational-arena = "0.2.9"
kcl-ast = { path = "../ast" }
kcl-sema = { path = "../sema" }
kcl-runtime = { path = "../runtime" }
kcl-error = { path = "../error" }
kcl-primitives = { path = "../primitives" }
scopeguard = "1.2.0"

[dev-dependencies]
kcl-parser = { path = "../parser" }
kcl-loader = { path = "../loader" }
insta = "1.8.0"
