[package]
name = "kclvm-lexer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_lexer = "0.1.0"
unic-emoji-char = "0.9.0"
kclvm-error.workspace = true

[dev-dependencies]
expect-test = "1.0"
