[package]
name = "kcl-parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_base_span.workspace = true
compiler_base_session.workspace = true
compiler_base_error.workspace = true
compiler_base_macros.workspace = true
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rustc_lexer = "0.1.0"
either = "1.1.0"
enquote = "1.1.0"
unicode_names2 = "0.4"
bstr = "0.2.16"
petgraph = "0.6.0"
num-bigint = "0.4"
regex = "1.7.0"
anyhow = "1.0"
parking_lot = "0.12.3"
glob = "0.3.1"

kcl-lexer.workspace = true
kcl-ast.workspace = true
kcl-span.workspace = true
kcl-error.workspace = true
kcl-config.workspace = true
kcl-sema.workspace = true
kcl-utils.workspace = true
kcl-primitives.workspace = true
walkdir = "2"

[dev-dependencies]
expect-test = "1.0"
insta = "1.8.0"
