[package]
name = "kcl-query"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
compiler_base_session.workspace = true
compiler_base_macros.workspace = true

kcl-ast.workspace = true
kcl-ast-pretty.workspace = true
kcl-parser.workspace = true
kcl-sema.workspace = true
kcl-error.workspace = true
kcl-utils.workspace = true
kcl-primitives.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.7.1"
maplit = "1.0.2"

[dev-dependencies]
pretty_assertions = "1.2.1"
insta = "1.8.0"
