[package]
name = "kcl-runner"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
glob = "0.3.0"
walkdir = "2"
libc = "0.2.112"
libloading = "0.7.3"
threadpool = "1.0"
chrono = "0.4.19"
tempfile = "3.5.0"
anyhow = "1.0"
once_cell = "1.10"
cc = "1.0"
uuid = "1.7.0"
compiler_base_session.workspace = true
compiler_base_macros.workspace = true

kcl-ast.workspace = true
kcl-parser.workspace = true
kcl-config.workspace = true
kcl-runtime.workspace = true
kcl-sema.workspace = true
kcl-version.workspace = true
kcl-error.workspace = true
kcl-query.workspace = true
kcl-utils.workspace = true
kcl-driver.workspace = true
kcl-evaluator.workspace = true
kcl-primitives.workspace = true

[dev-dependencies]
kcl-parser = { path = "../parser" }
criterion = "0.5"

[[bench]]
name = "bench_runner"
harness = false
