[package]
name = "kcl-sema"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
generational-arena = "0.2.9"
phf = { version = "0.9", features = ["macros"] }
bit-set = "0.5.0"
bitflags = "1.2.1"
once_cell = "1.5.2"
fancy-regex = "0.7.1"
unicode_names2 = "0.4"
petgraph = "0.6.0"
anyhow = "1.0"
regex = "1.7.0"
lazy_static = "1.4.0"

kcl-primitives.workspace = true
kcl-ast.workspace = true
kcl-ast-pretty.workspace = true
kcl-runtime.workspace = true
kcl-error.workspace = true
kcl-span.workspace = true
kcl-utils.workspace = true
compiler_base_span.workspace = true
compiler_base_session.workspace = true
compiler_base_macros.workspace = true
compiler_base_error.workspace = true
suggestions = "0.1.1"
parking_lot = { version = "0.12.0", default-features = false }

[dev-dependencies]
kcl-parser = { path = "../parser" }
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false
