[package]
name = "kcl-tools"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.7.1"
walkdir = "2"
anyhow = "1.0"
compiler_base_session.workspace = true

rustc_lexer = "0.1.0"
kcl-ast.workspace = true
kcl-error.workspace = true
kcl-parser.workspace = true
kcl-sema.workspace = true
kcl-config.workspace = true
kcl-ast-pretty.workspace = true
kcl-query.workspace = true
kcl-runner.workspace = true
kcl-runtime.workspace = true
kcl-driver.workspace = true
kcl-utils.workspace = true
kcl-primitives.workspace = true

serde_json = "1.0"
serde_yaml.workspace = true
once_cell = "1.15.0"
regex = "1.3"
json-spanned-value = "0.2.2"
compiler_base_span.workspace = true
located_yaml = "0.2.1"

[dev-dependencies]
pretty_assertions = "1.2.1"
criterion = "0.5"
insta = "1.8.0"

[[bench]]
name = "benchmark"
harness = false
