[package]
name = "kclvm-api"
version = "0.8.3"
edition = "2021"

[dependencies]
tokio = {version = "1.25.0", features = ["full"] }
futures = "0.3.28"
jsonrpc-stdio-server = "18.0.0"
tempfile = "3.5.0"
maplit = "1.0.2"
prost = "0.11.8"
prost-types = "0.11.8"
serde_json = "1.0"
serde_yaml = "0.9.32"
anyhow = "1.0.70"
serde = { version = "1", features = ["derive"] }
indexmap = "1.0"
once_cell = "1.5.2"

prost-wkt = {path = "../third-party/prost-wkt", version = "0.4.1"}
prost-wkt-types = {path = "../third-party/prost-wkt/wkt-types", version = "0.4.1"}

kclvm-runner = {path = "../runner"}
kclvm-config = {path = "../config"}
kclvm-driver = {path = "../driver"}
kclvm-error = {path = "../error"}
kclvm-parser = {path = "../parser"}
kclvm-loader = {path = "../loader"}
kclvm-sema = {path = "../sema"}
kclvm-ast = {path = "../ast"}
kclvm-ast-pretty = {path = "../ast_pretty"}
kclvm-runtime = {path = "../runtime"}
kclvm-tools = {path = "../tools" }
kclvm-query = {path = "../query"}
kcl-language-server = {path = "../tools/src/LSP"}

[dev-dependencies]
criterion = "0.4.0"

[build_dependencies]
protoc-bin-vendored = "3.0.0"
prost-build = "0.11.8"
prost-wkt-build = {path = "../third-party/prost-wkt/wkt-build", version = "0.4.1"}
