[package]
name = "kclvm-ast"
version = "0.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_base_span = {path = "../../compiler_base/span", version = "0.0.2"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

kclvm-span = {path = "../span", version = "0.4.5"}

[dev-dependencies]
kclvm-parser = {path = "../parser", version = "0.4.5"}
