[package]
name = "kcl-ast"
version = "0.11.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
compiler_base_span = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

kcl-span = { path = "../span" }
kcl-error = { path = "../error" }
thread_local = "1.1.7"
kcl-utils = {path = "../utils"}
anyhow = "1.0"

[dev-dependencies]
kcl-parser = { path = "../parser" }
