[package]
name = "kclvm-ast-pretty"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kclvm-parser = {path = "../parser"}
kclvm-error = {path = "../error"}
kclvm-ast = {path = "../ast"}

indexmap = "1.0"
fancy-regex = "0.7.1"
pretty_assertions = "1.3.0"
compiler_base_session = {path = "../../compiler_base/session"}
compiler_base_macros = "0.0.1"
