[package]
name = "kclvm-capi"
version = "0.4.6"
edition = "2021"

[dependencies]
protobuf = "3.1.0"
serde_json = "1.0"
serde_yaml = "0.9.2"
protobuf-json-mapping = "3.1.0"
compiler_base_session = {path = "../../compiler_base/session"}
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
indexmap = "1.0"
tempfile = "3.3.0"

kclvm-runner = {path = "../runner"}
kclvm-config = {path = "../config"}
kclvm-driver = {path = "../driver"}
kclvm-error = {path = "../error"}
kclvm-parser = {path = "../parser"}
kclvm-sema = {path = "../sema"}
kclvm-ast = {path = "../ast"}
kclvm-ast-pretty = {path = "../ast_pretty"}
kclvm-runtime = {path = "../runtime"}
kclvm-tools = {path = "../tools" }
kclvm-query = {path = "../query"}

[dev-dependencies]
criterion = "0.3"

[build_dependencies]
protobuf-codegen= "3.1.0"
protoc-bin-vendored = "3.0.0"